--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -1,11 +1,17 @@
 /* Form.module.css */
 .formContainer {
+    position: fixed;
     width: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     margin: 2rem auto;
     background-color: #f9f9f9;
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+    box-shadow: 0px 0px 20px 8px hsl(0, 0%, 0%, 0.6);
 }
 
 .form {
@@ -44,3 +50,4 @@ button:hover {
 .formContainer button[type="button"]:hover {
     background-color: #c9302c;
 }
+
