--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -51,3 +51,9 @@ button:hover {
     background-color: #c9302c;
 }
 
+@media(max-width: 600px){
+    .formContainer{
+        width: 80%;
+    }
+}
+
